# uncc_sar_focusing

./: .gitmodules  CMakeLists.txt  README.md
include/: charlotte_sar_api.hpp  uncc_complex.hpp  uncc_sar_focusing.hpp  uncc_sar_globals.hpp  uncc_sar_matio.hpp  uncc_simplematrix.hpp
matlab/: LargeMotionErrorSARFocusing.m  PGA.m  SAR_LargeMotionError.m  VideoResultCreator.m  bpBasic.m  convertSPH2MAT.m  experiment_focusing.m  focusalg_BP.m  focusalg_MF.m  focusalg_PF.m  formImage3DSAR.m  formSARImage.m
matlab/mex/: CMakeLists.txt
matlab/mex/cmake/: FindMatlab.cmake
matlab/mex/cpuBackProjection/: CMakeLists.txt  cpuBackProjection.cpp  cpuBackProjection.hpp
matlab/mex/mexcuda/: CMakeLists.txt
matlab/mex/mexcuda/cudaBackProjection/: CMakeLists.txt  cudaBackProjection.cu  gpuBackProjectionKernel.cuh
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
python/: autofocus_python.py  cudaErrorFunctions.cu  focusalg_BP.py
src/: CMakeLists.txt
src/autofocus/: CMakeLists.txt  autofocus_gpu.cu  autofocus_gpu_optuna.cu  autofocus_gpu_tensorflow.cu  gridSearchErrorFunctions.cuh  gridSearchErrorFunctions_dft.cuh  optunaSearchCaller.py
src/autofocus/cpu/: CMakeLists.txt  autofocus_cpu.cpp
src/core/: charlotte_sar_api.cpp  uncc_sar_matio.cpp
src/cpuBackProjection/: CMakeLists.txt  cpuBackProjection.cpp  cpuBackProjection.hpp  cpuBackProjection_fft.cpp  cpuBackProjection_fft.hpp  cpuBackProjection_main.cpp  cpuBackProjection_main.hpp  cpuBackProjection_mex.cpp  cpuBackProjection_mex.hpp  mxComplexSingleClass.hpp  uncc_complex.hpp  uncc_sar_focusing.hpp
src/examples/: CMakeLists.txt  charlotte_sar_api.hpp  example_cpu.cpp  example_cpu.hpp  example_gpu.cpp  example_gpu.cu  example_gpu.hpp
src/gpuBackProjection/: CMakeLists.txt
src/gpuBackProjection/cudaAdd/: CMakeLists.txt  cudaAdd.cu  gpuAddKernel.cuh
src/gpuBackProjection/cudaBackProjection/: CMakeLists.txt  cudaBackProjection.cu  cufftShift_1D_IP.cu  gpuBackProjectionKernel.cuh  gpu_sar_focusing.hpp
src/gpuBackProjection/cuda_sar_focusing/: CMakeLists.txt  cuda_BackProjectionKernels.cuh  cuda_sar_focusing.hpp  cuda_sar_focusing_main.cu  cuda_sar_focusing_mex.cu  cuda_sar_focusing_mex.cuh  libcuda_sar_focusing.cu
src/mexcuda/cudaAdd/: CMakeLists.txt  cudaAdd.cu  gpuAddKernel.cuh
